@@ -8,6 +8,7 @@ Version: 1.3.0 (in development)
 - Add "REMOVE" command to move databases out of hosted folder for Claris FileMaker Server 19.3.1.
 - Update "GET SERVERPREFS" command to get streaming URL cookie check setting for Claris FileMaker Server 19.3.2. (Usage: "fmcsadmin get serverprefs AuthenticatedStream")
 - Update "SET SERVERPREFS" command to set streaming URL cookie check setting for Claris FileMaker Server 19.3.2. (Usage: "fmcsadmin set serverprefs AuthenticatedStream=1")
+- Improve error handling in case of detecting server-side error.
 - Suppress outputting error messages for debugging.
 - Add an error message for the FileMaker error code 20501.
 - Built with Go 1.16.
